sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:12: error: not found: value lgr
		for(i:Int <-0 to lgr-2){
                                 ^